# seher_ai_book

./: .dockerignore  .gitignore  .npmignore  Dockerfile  QWEN.md  README.md  docker-compose.yml  docusaurus.config.js  jest.config.js  package-lock.json  package.json  requirements.txt  seherkhan.md  server.js  sidebars.js  test_auth_functionality.py  test_auth_simple.py  test_solution.py
backend/: .dockerignore  .env.example  .gitignore  API_TEST_SUMMARY.md  API_UPGRADE_GUIDE.md  API_USAGE_GUIDE.md  DEPLOYMENT_TEST_REPORT.md  Dockerfile  FINAL_API_TEST_SUMMARY.md  HF_DEPLOYMENT.md  HF_SPACE_SECRETS_SETUP.md  HUGGINGFACE_UPDATE_INSTRUCTIONS.md  INGESTION_STATUS.md  RATE_LIMITING_SUMMARY.md  README.md  api_test.sh  auth.py  check_collection.py  check_env.py  cloud_server.py  combined_api.py  combined_api_with_validation.py  compatible_rag_api.py  component_test.py  config.py  connection_test.py  create_qdrant_collection.py  crud.py  debug_ingest.py  debug_ingest_fixed.py  debug_rag_api.py  debug_server.py  dns_check_api.py  email_service.py  final_api_test.sh  final_server.py  ingest_docs.py  ingest_docs_batch.py  ingest_docs_efficient.py  ingest_docs_minimal.py  (+30 more)
backend/.specify/memory/: constitution.md
backend/auth/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  services.py  utils.py
backend/rag_api/: __init__.py  config.py  main.py
backend/rag_api/db/: connection.py  migrations.py
backend/routes/: __init__.py  auth.py  chat.py
backend/scripts/: check_qdrant_data.py  ingest_all_content.py  ingest_content.py  init_db.py
(+314 files in other folders)
